# pyfunc3

./: Makefile  README.md  __init__.py  install_packages.sh  pyproject.toml
config/: README.md  pyproject.toml
config/pyfunc3_config/: __init__.py  get_config.py  get_email_path.py
email/: README.md  pyproject.toml
email/pyfunc2_email/: __init__.py  connect.py
email/pyfunc3_email/: download_all_attachments_in_inbox.py  download_emails.py
file/: README.md  __init__.py  pyproject.toml  remove_empty_folders.py
file/pyfunc2_file/: create.py
file/pyfunc3_file/: __init__.py  check_and_create_path.py
ocr/: CompanyList.py  README.md  __init__.py  from_month_to_company.py  pyproject.toml
ocr/pyfunc2_ocr/: CompanyList.py  get_company_from_pdf.py  get_date_from_pdf.py  get_date_from_pdf_pattern.py
ocr/pyfunc3_ocr/: __init__.py  find_string_in_file_path.py
pyfunc3/: __init__.py  config.py  email.py  file.py  ocr.py
