[project]
name = "pyfunc3-config"
version = "0.1.0"
description = "Configuration utilities for the month project"
authors = [
    {name = "Softreck Team"}
]
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = [
    "pyyaml>=6.0",
    "pathlib>=1.0.1"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
