[project]
name = "pyfunc2-file"
version = "0.1.0"
description = "File operations utilities for the month project"
authors = [
    {name = "Softreck Team"}
]
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
